// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button Component Snapshots renders disabled button correctly 1`] = `
<div>
  <button
    class="btn btn-primary btn-md"
    disabled=""
    type="button"
  >
    Disabled Button
  </button>
</div>
`;

exports[`Button Component Snapshots renders primary button correctly 1`] = `
<div>
  <button
    class="btn btn-primary btn-md"
    type="button"
  >
    Primary Button
  </button>
</div>
`;

exports[`Button Component Snapshots renders secondary button correctly 1`] = `
<div>
  <button
    class="btn btn-secondary btn-md"
    type="button"
  >
    Secondary Button
  </button>
</div>
`;
